Fix horizontal stretching of HTML img embeds in mobile layout

--- a/public/css/mobile-styles.css
+++ b/public/css/mobile-styles.css
@@ -25,10 +25,6 @@
         font-size: 15px;
     }
 
-    .mes_text img {
-        width: 100%;
-    }
-
     #extensions_settings,
     #extensions_settings2 {
         width: 100% !important;
